--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/core": "^11.0.13",
     "@nestjs/platform-express": "^11.0.13",
     "@prisma/client": "^6.6.0",
+    "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cohere-ai": "^7.16.0",
     "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.0",
@@ -42,6 +44,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^11.0.13",
+    "@types/axios": "^0.14.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
