feat(analysis): add test e2e

--- a/.env.default
+++ b/.env.default
@@ -1,9 +1,14 @@
-NODE_ENV=development
-PORT=3000
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=assessment_db
-DATABASE_URL=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
-OPENAI_API_KEY=testing
+NODE_ENV=
+PORT=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_URL=
+GROQ_API_KEY=
+PROMPT_SYSTEM_GENERATE_MATCH=
+PROMPT_SYSTEM_GENERATE_SCORE_INIT=
+PROMPT_SYSTEM_GENERATE_SCORE_FINAL=
+PROMPT_SYSTEM_RESUME_CURRICULO_INIT=
+PROMPT_SYSTEM_RESUME_CURRICULO_FINAL=
