feat(env): add PROMPTS_URL for build download

--- a/.env.default
+++ b/.env.default
@@ -12,3 +12,4 @@ PROMPT_SYSTEM_GENERATE_SCORE_INIT=
 PROMPT_SYSTEM_GENERATE_SCORE_FINAL=
 PROMPT_SYSTEM_RESUME_CURRICULO_INIT=
 PROMPT_SYSTEM_RESUME_CURRICULO_FINAL=
+PROMPTS_BASE_URL=
